--- a/cmm/tsconfig.json
+++ b/cmm/tsconfig.json
@@ -11,5 +11,11 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true
-  }
+  },
+  "include": [
+    "./src/**/*.ts"
+  ],
+  "exclude": [
+    "./scripts/**/*.ts"
+  ]
 }
