--- a/cmm/tsconfig.scripts.json
+++ b/cmm/tsconfig.scripts.json
@@ -3,19 +3,19 @@
     "target": "es2016",
     "lib": ["DOM", "ES2015"],
     "module": "commonjs",
-    "rootDir": "./src",
-    "declaration": false,
-    "sourceMap": false,
-    "outDir": "./dist",
+    "rootDir": "./scripts",
+    "declaration": true,
+    "sourceMap": true,
+    "outDir": "./scripts-build",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true
   },
   "include": [
-    "./src/**/*.ts"
+    "./scripts/**/*.ts"
   ],
   "exclude": [
-    "./scripts/**/*.ts"
+    "./src/**/*.ts"
   ]
 }
